--- a/Resources/views/Viewer/insertgraph.html.twig
+++ b/Resources/views/Viewer/insertgraph.html.twig
@@ -3,17 +3,19 @@
     <tr>
         <td>
             <form id="form_{{ formname }}">
-                <div id="more_{{ formname }}"></div>
-                {# % render formviewpath with { 'form':form } % #}
-            
-                <input type="button" onclick="update('{{ formname }}',true)" name="{{ formname }}[update]" value="Update" />
                 
+                <div id="more_{{ formname }}"></div>
+                
+                {% if formgraphpath is defined %}
+                    {% render formgraphpath with { 'form':form } %}
+                {% endif %}
+                
+                <input type="button" onclick="update('{{ formname }}',true)" name="{{ formname }}[update]" value="Update" />                
                 <input type="button" onclick="addSingleFormTo('{{ formname }}','{{ formviewpath }}')" name="{{ formname }}[add]" value="Add Values" />
                 <input type="button" onclick="removeSingleFormTo('{{ formname }}')" name="{{ formname }}[remove]" value="Remove Values" />
                 <input type="checkbox" id="autoupdate_{{ formname }}" name="{{ formname }}[autoupdate]" checked="" />
                 <label for="autoupdate_{{ formname }}" >Auto update graph</label>
             </form>
-            {# include_partial('data/viewercombineform', array('form'=>$graphviewercombineform,'vars'=>$vars /*igual no se usa*/, 'combine'=>$combine, 'urlopts'=>$url)) #}
         </td>
         <td><div style="z-index: 9" id="div_{{ formname }}" style="border-width: 1px"></div></td>
     </tr>
