Generic forms completed

--- a/Resources/views/Viewer/viewer.html.twig
+++ b/Resources/views/Viewer/viewer.html.twig
@@ -10,13 +10,18 @@
 <div id="forms_container"></div>
 
 <BR/>
-<div style="text-align: right" width="100%">
+<div style="text-align: right" width="100%"> 
+    
     <input type="button" value="Add Graph" onClick="addGraph('{{ path(insertgraphroute) }}')" />
     <input type="button" value="Remove Graph" onClick="removeGraph('{{ path(insertgraphroute) }}')" />
+
+    <BR />
+    
     {% if viewerformpath is not null %}                
         {% render viewerformpath  %}
-    {% endif %}
-                    
+    {% endif %}   
+    <input type="button" value="Update All" onClick="update_all()" />
+                   
 </div>
 
 <BR/>
