--- a/Resources/views/Viewer/viewer.html.twig
+++ b/Resources/views/Viewer/viewer.html.twig
@@ -30,7 +30,7 @@
 <br/>
 <span style="font-size: small">You can use this link to return to this page displaying the same graphics</span>
 <br/>
-<input type="button" value="Generate URL" onClick="refreshURL()" /><BR />
+<input type="button" value="Generate URL" onClick="refreshURL('{{ viewerurl }}')" /><BR />
 <textarea id="url" cols="50" rows="5">
 </textarea>
 
