--- a/Resources/views/Viewer/insertgraph.html.twig
+++ b/Resources/views/Viewer/insertgraph.html.twig
@@ -1,18 +1,19 @@
 
+
+
 <table width="100%" style="border-width: 1px;border-color: black;border-style: solid; text-align: left" id="table_for_{{ formname }}">
     <tr>
         <td>
-            <form id="form_{{ formname }}">
-                
+            <form id="form_{{ formname }}" class="form-horizontal">
                 <div id="more_{{ formname }}"></div>
                 
                 {% if formgraphpath is not null %}                
                     {% render formgraphpath  with {'formname': formname } %}
                 {% endif %}
                 
-                <input type="button" onclick="update('{{ formname }}',true)" name="{{ formname }}[update]" value="Update" />                
-                <input type="button" onclick="addSingleFormTo('{{ formname }}','{{ formviewpath }}')" name="{{ formname }}[add]" value="Add Values" />
-                <input type="button" onclick="removeSingleFormTo('{{ formname }}')" name="{{ formname }}[remove]" value="Remove Values" />
+                <input type="button" onclick="update('{{ formname }}',true)" name="{{ formname }}[update]" value="Update" class="btn-primary" />                
+                <input type="button" onclick="addSingleFormTo('{{ formname }}','{{ formviewpath }}')" name="{{ formname }}[add]" class="btn-success" value="Add Values" />
+                <input type="button" onclick="removeSingleFormTo('{{ formname }}')" name="{{ formname }}[remove]" class="btn-danger" value="Remove Values" />
                 <input type="checkbox" id="autoupdate_{{ formname }}" name="{{ formname }}[autoupdate]" checked="" />
                 <label for="autoupdate_{{ formname }}" >Auto update graph</label>
             </form>
