Added padding to graphviewer

--- a/Resources/views/Viewer/viewer.html.twig
+++ b/Resources/views/Viewer/viewer.html.twig
@@ -36,7 +36,7 @@
                 <p class="help-block">You can use this link to return to this page displaying the same graphics.</p>
             </div>
         </div>
-        <textarea id="url" cols="200" rows="5">
+        <textarea id="url" rows="5" style="width: 400px">
         </textarea>
 
         <script src="{{ asset('bundles/dafuerjpgraph/js/viewer.js') }}" type="text/javascript"></script>
