Update viewer.js to work over every input element although it is not in a form

--- a/Resources/views/Viewer/insertgraph.html.twig
+++ b/Resources/views/Viewer/insertgraph.html.twig
@@ -23,7 +23,7 @@
                 <label for="autoupdate_{{ formname }}" >Auto update graph</label>#}
             </form>
         </td>
-        <td><div style="z-index: 9" id="div_{{ formname }}" style="border-width: 1px"></div></td>
+        <td id="td_{{ formname }}"><div style="z-index: 9" id="div_{{ formname }}" style="border-width: 1px"></div></td>
     </tr>
 </table>
 
